Updated project , adjusted code, removed boilerplate